nexus/nexus-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nexus
spec: {}
