nexus/nexus-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nexus
  name: nexus
spec:
  ports:
  - name: 8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nexus-server
  type: ClusterIP
