nexus/nexus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.17.0/24
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - nexus.cg5labs.net
      secretName: nexus-tls
  rules:
  - host: "nexus.cg5labs.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nexus
              port: 
                number: 8081
